--- a/neonion/static/stylesheets/partials/_base.scss
+++ b/neonion/static/stylesheets/partials/_base.scss
@@ -52,7 +52,7 @@ p {
   #search-form {
     width: 8*$column;
     height: $column + $column-gap;
-    margin: $column + ($column-gap/4) 0 0 $column + ($column-gap/4);
+    margin: $column + ($column-gap/4) 0 $column-gap $column + ($column-gap/4);
     padding: $half-baseline ($column - $column-gap/2) 0 ($column - $column-gap/2);
     display: inline-block;
     position: relative;
@@ -77,7 +77,6 @@ p {
     width: 6*$column + 5*$column-gap;
     padding:($base-font-size/2) $base-font-size ($base-font-size/2) $column;
     background-color: $white;
-
   }
   ::-webkit-input-placeholder {
     color: $mid-gray;
